<resources>
    <string name="app_name">Vendas Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="menu_my_sales">Minhas Vendas</string>
    <string name="menu_my_products">Meus Produtos</string>
    <string name="menu_affiliates">Afiliados</string>
    <string name="menu_messages">Mensagens</string>
    <string name="menu_notifications">Notificações</string>
    <string name="menu_my_account">Minha Conta</string>
    <string name="menu_about_apps">Sobre o App</string>

    <string name="my_profile_title">My Profile</string>
    <string name="balance_desc">Seu saldo atual é de:</string>

    <string name="messages_title">Mensagens</string>
    <string name="messages_recent">Mensagens recentes</string>

    <string name="my_sales_title">Miinas vendas</string>
    <string name="sales_id_format">id %1$d</string>
    <string name="sales_text_separator">&#9679;</string>
</resources>
