<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_my_sales"
            android:icon="@drawable/ico_minhas_vendas"
            android:title="@string/menu_my_sales" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ico_meus_produtos"
            android:title="@string/menu_my_products" />
        <item
            android:id="@+id/nav_affiliates"
            android:icon="@drawable/ico_afiliados"
            android:title="@string/menu_affiliates" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ico_mensagens"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ico_notificacoes"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ico_minha_conta"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_about_apps"
            android:icon="@drawable/ico_sobre_o_app"
            android:title="@string/menu_about_apps" />
    </group>

</menu>
